Last cleanup of files + README